@@ -1,3 +1,4 @@
+from collections import OrderedDict
 import functools
 import json
 import pathlib
@@ -10,7 +11,9 @@ import dclab
 def get_dctag_score_dict(name="blood"):
     path = pkg_resources.resource_filename("dctag.resources",
                                            f"ml_scores_{name}.json")
-    score_dict = json.loads(pathlib.Path(path).read_text())
+    score_dict = json.loads(pathlib.Path(path).read_text(),
+                            # load as ordered dictionary
+                            object_pairs_hook=OrderedDict)
     return score_dict
 
 
