@@ -1,4 +1,5 @@
 0.3.1
+ - fix: minor labeling fix for previous/next in multiple tab
  - fix: properly clear visualization after session is closed
  - fix: start enumerating events at 1 instead of 0 in widget_vis
 0.3.0
